# RustFS

./: Cargo.toml  README.md  auth_data.json  build.rs  config.toml  example2.txt  performance_test_read.py  performance_test_upload.py
performance_results/: performance_upload_results.txt  read_performance_results.txt
proto/: chunk.proto  filesystem.proto  master.proto
src/: chunkserver_impl.rs  chunkserver_service.rs  config.rs  filesystem.rs  lib.rs  master_impl.rs  master_service.rs  proto.rs  util.rs
