[package]
name = "rustfs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tonic = "0.8"
prost = "0.11"
bytes = "1.1"
tokio-stream = "0.1"                               # Add this line

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11"
protoc-bin-vendored = "3.1"
