[package]
name = "rustfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1"
clap = { version = "4.1", features = ["derive"] }
prost = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.5"
tonic = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11"
protoc-bin-vendored = "3.1"
